# caps-near-contracts

./: .gitignore  Cargo.toml  LICENSE  README.md  ava.config.js  package.json
common/: Cargo.toml
common/src/: lib.rs  soulbound_init_args.rs
hub/: Cargo.toml
hub/src/: lib.rs
insoul_base/: Cargo.toml
insoul_base/src/: lib.rs  tests.rs  user.rs
insoul_core/: Cargo.toml
insoul_core/src/: lib.rs  tests.rs
integration-tests/: core.ava.ts
integration-tests/src/: hub.ava.ts
integration-tests/src/utils/: index.ts
integration-tests/utils/: index.ts
soul_token/: Cargo.toml
soul_token/src/: lib.rs  tests.rs
soulbound/: Cargo.toml
soulbound/src/: lib.rs
src/: lib.rs
subtoken/: Cargo.toml
subtoken/src/: lib.rs
user_token/: Cargo.toml
